@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>guncat</h1>
-<h2>guncat_1.01.00.tar.gz</h2>
+<h2>guncat_1.01.01.tar.gz</h2>
 <h2>2014-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>guncat(1)</h1>
-<h2>guncat_1.01.00.tar.gz guncat - unencrypting file concatenation</h2>
+<h2>guncat_1.01.01.tar.gz guncat - unencrypting file concatenation</h2>
 <h2>2014-2015</h2>
 
 
