@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Guncat V 1.01.00</title>
+<title>Guncat V 1.01.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr>
-<h1>Guncat V 1.01.00</h1>
+<h1>Guncat V 1.01.01</h1>
 <h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
 
 <h2>Center for Information Technology, University of Groningen</h2><h2>2014-2015</h2>
@@ -34,14 +34,14 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/guncat/releases/tag/1.01.01">1.01.01</a>
+Oct  6, 2015;
         <li> <a href="https://github.com/fbb-git/guncat/releases/tag/1.01.00">1.01.00</a>
 Oct  4, 2015;
         <li> <a href="https://github.com/fbb-git/guncat/releases/tag/0.92.00">0.92.00</a>
 May 27, 2014;
         <li> <a href="https://github.com/fbb-git/guncat/releases/tag/0.90.00">0.91.00</a>
-May 4, 2014;
-        <li> <a href="https://github.com/fbb-git/guncat/releases/tag/0.90.00">0.90.00</a>,
-May 3, 2014.
+May 4, 2014.
         </ul>
     
 <p>
