@@ -1,3 +1,14 @@
+guncat (1.01.01)
+
+  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
+    than 'cd'. Fixed in this release.
+
+  * Kevin Brodsky also observed that the combined size of all precompiled 
+    headers might exceed some disks capacities. The option -P was added to the
+    ./build script to prevent the use of precompiled headers.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 21:25:25 +0200
+
 guncat (1.01.00)
 
  * Update to version 1.00.00 after being operational for over one year without
